--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Indecision App</title>
-  <link rel="icon" type="image/png" href="/images/wshrug.png">
+  <title>Expenso</title>
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="./bundle.js"></script>
+  <script src="/bundle.js"></script>
 </body>
 
 </html>
