--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Expenso</title>
+  <link rel="icon" type="image/png" href="/images/money.jpg">
+  <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 
 <body>
